--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Listing Users</h1>
 
-<table>
+<table class="table table-bordered">
   <tr>
     <th>Id</th>
     <th>Username</th>
     <th>Email</th>
     <th>Created at</th>
+    <th>Action</th>
   </tr>
 
   <% @users.each do |user| %>
