--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,11 @@
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value.html_safe %></div>
-    <% end %>
-    <%= yield %>
+    <div class="container">
+      <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>"><%= value.html_safe %></div>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
