--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,35 +2,35 @@
 
 
 <%= form_with scope: :user, url: users_url, local: true do |form| %>
-    <p>
+    <div class="form-group">
       <%= form.label :username %><br>
-      <%= form.text_field :username %>
-    </p>
+      <%= form.text_field :username, class: 'form-control' %>
+    </div>
 
-    <p>
+    <div class="form-group">
       <%= form.label :password %><br>
-      <%= form.text_field :password %>
-    </p>
+      <%= form.text_field :password, class: 'form-control' %>
+    </div>
 
-    <p>
+    <div class="form-group">
       <%= form.label :email %><br>
-      <%= form.text_field :email %>
-    </p>
+      <%= form.text_field :email, class: 'form-control' %>
+    </div>
 
-    <p>
+    <div class="form-group">
       <%= form.label :address %><br>
-      <%= form.text_area :address %>
-    </p>
+      <%= form.text_area :address, class: 'form-control' %>
+    </div>
 
-    <p>
+    <div class="form-group">
       <%= form.label :phone %><br>
-      <%= form.text_field :phone %>
-    </p>
+      <%= form.text_field :phone, class: 'form-control' %>
+    </div>
 
-    <p>
-      <%= form.submit %>
-      <%= link_to "Back", users_url %>
-    </p>
+    <div class="form-group">
+      <%= form.submit("Save", class: 'btn btn-primary') %>
+      <%= link_to "Back", users_url, class: 'btn btn-warning' %>
+    </div>
 
 
 <% end %>
